--- a/mobile/src/index.scss
+++ b/mobile/src/index.scss
@@ -12,6 +12,48 @@ body {
 .color-red{
   color: #EC502B;
 }
+.color-white{
+  color: white;
+}
 .underline{
   text-decoration: underline;
+}
+// copy from bootstrap
+// https://getbootstrap.com/docs/4.3/utilities/embed/
+.embed-responsive {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding: 0;
+  overflow: hidden;
+  &.embed-responsive-16by9 {
+    &::before {
+      content: '';
+      display: block;
+      padding-top: 56.25%;
+    }
+  }
+  .embed-responsive-item{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+}
+
+.font-thumb{
+  font-size: 14px;
+}
+
+.d-block{
+  display: block;
+}
+
+.divider{
+  width: 100%;
+  height: 1px;
+  background-color:$color-primary;
 }
